HPS avoiding second fft for the white signal estimation

--- a/HPS/HarmonicProductSpectrum.ipynb
+++ b/HPS/HarmonicProductSpectrum.ipynb
@@ -37,7 +37,9 @@
     "maxFreq = 60\n",
     "maxHarmonic = 50\n",
     "peddingFactor = 100\n",
-    "detectionThresh = 2"
+    "detectionThresh = 2\n",
+    "medFiltWindHz = 10\n",
+    "sFactor = 1.1"
    ]
   },
   {
@@ -59,32 +61,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "64d93f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nfft = next_fast_len(x.shape[0])\n",
+    "f, pxx = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb7480ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nfft = next_fast_len(x.shape[0]) * peddingFactor\n",
+    "f2, pxx2 = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "33105274",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# first phase for white signal estimation:\n",
-    "nfft = next_fast_len(x.shape[0])\n",
-    "f, pxx = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)\n",
-    "cond = f < maxFreq * maxHarmonic * 1.1\n",
-    "pxx = pxx[cond]\n",
-    "f = f[cond]\n",
-    "\n",
-    "winSize = (np.round(10/ f[1] / 2) * 2).astype(int) + 1\n",
-    "pxxMed = medfilt2d(np.log(pxx), (winSize, 1))\n",
-    "interpFuns = [interp1d(f, pxxMed[:, channel]) for channel in range(pxxMed.shape[1])]\n",
-    "\n",
     "# upsampled spectrum for later HPS with better resolution:\n",
     "nfft = next_fast_len(x.shape[0]) * peddingFactor\n",
     "f, pxx = periodogram(x, fs=1 / t[1], return_onesided=True, axis=0, nfft=nfft)\n",
-    "cond = f < maxFreq * maxHarmonic\n",
+    "\n",
+    "# white signal:\n",
+    "condPre = f < maxFreq * maxHarmonic * sFactor\n",
+    "pxx = pxx[condPre]\n",
+    "f = f[condPre]\n",
+    "fWhite = f[::peddingFactor]\n",
+    "pxxDec = pxx[::peddingFactor]\n",
+    "winSize = (np.round(medFiltWindHz/ fWhite[1] / 2) * 2).astype(int) + 1\n",
+    "pxxMed = medfilt2d(np.log(pxxDec), (winSize, 1))\n",
+    "interpFuns = [interp1d(fWhite, pxxMed[:, channel]) for channel in range(pxxMed.shape[1])]\n",
+    "cond = f < maxFreq * maxHarmonic \n",
     "pxx = pxx[cond]\n",
     "f = f[cond]\n",
-    "\n",
-    "# pre-whitening section:\n",
     "pxxMed = np.concatenate([np.atleast_2d(interpFun(f)) for interpFun in interpFuns], axis=0).T\n",
+    "\n",
+    "# pre-whitening\n",
     "logPxxDetrand = np.log(pxx) - pxxMed\n",
     "\n",
     "# thresholding\n",
@@ -117,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c447a4",
+   "id": "4304bf2c",
    "metadata": {},
    "outputs": [],
    "source": [
