closed the gap between the faster implementation and the ACP

--- a/myTransformers/dataProcess.ipynb
+++ b/myTransformers/dataProcess.ipynb
@@ -39,31 +39,23 @@
     "\n",
     "    def getCS(x, fs):\n",
     "        fMin, R, Nw, w, D = getParams(fs)\n",
-    "        # buffering\n",
-    "        bufferX = sliding_window_view(x, (Nw, ), )[::R, :]\n",
     "\n",
-    "        # x_w\n",
-    "        bufferX_w = np.multiply(bufferX, w)\n",
-    "        # x_w^P\n",
-    "        bufferX_wD = np.multiply(bufferX, w * D)\n",
+    "        _, _, X_w = stft(x, fs=fs, window=w, nperseg=Nw, noverlap=Nw - R, nfft=Nw, return_onesided=True)\n",
+    "        f, t, x_w_d = stft(x, fs=fs, window=w * D, nperseg=Nw, noverlap=Nw - R, nfft=Nw, return_onesided=True)\n",
     "\n",
-    "        alpha = np.fft.fftfreq(bufferX.shape[0], R / fs)\n",
-    "        f = np.fft.fftfreq(bufferX.shape[1], 1 / fs)\n",
+    "        # here I save some computation time (factor of fMin / fs ~ 4) but later I have to implement the approsimation \n",
+    "        # to the coherence by neglecting the frequency shift CCoh = CS / CS[0, :]\n",
+    "        X_w = X_w[f >= fMin, :]\n",
+    "        x_w_d = x_w_d[f >= fMin, :]\n",
     "\n",
-    "        X_w   = np.fft.fft(bufferX_w, axis=1)\n",
-    "        x_w_d = np.fft.fft(bufferX_wD, axis=1)\n",
+    "        CS = np.fft.fft(np.conjugate(X_w) * x_w_d, axis=1).T\n",
     "\n",
-    "        X_w = X_w[:, f >= fMin]\n",
-    "        x_w_d = x_w_d[:, f >= fMin]\n",
-    "\n",
-    "        X_w_norm = np.divide(X_w, np.sqrt(np.mean(X_w * np.conjugate(X_w), axis=0)))\n",
-    "        x_w_d_norm = np.divide(x_w_d, np.sqrt(np.mean(x_w_d * np.conjugate(x_w_d), axis=0)))\n",
-    "\n",
-    "        CS = np.fft.fft(np.conjugate(X_w) * x_w_d, axis=0)\n",
-    "        CCoh = np.fft.fft(np.conjugate(X_w_norm) * x_w_d_norm, axis=0)\n",
-    "        \n",
+    "        alpha = np.fft.fftfreq(x_w_d.shape[1], R / fs)\n",
     "        CS = CS[alpha >= 0, :]\n",
-    "        CCoh = CCoh[alpha >= 0, :]\n",
+    "        CCoh = CS / CS[0, :]\n",
+    "\n",
+    "        alpha = alpha[alpha >= 0]\n",
+    "        f = f[f >= fMin]\n",
     "        \n",
     "        EES_CS = np.sum(np.abs(CS), axis=1)\n",
     "        EES_CCoh = np.sum(np.abs(CCoh), axis=1)\n",
