implemented the normalization of the CS

--- a/myTransformers/CS_proper.ipynb
+++ b/myTransformers/CS_proper.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy.signal import iirfilter, lfilter, periodogram, stft\n",
+    "from scipy.fft import fft, next_fast_len, fftfreq\n",
     "from numpy.lib.stride_tricks import sliding_window_view\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -194,8 +195,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numpy.lib.stride_tricks import sliding_window_view\n",
-    "\n",
     "def getCS_CMS(x, fs, norm=False):\n",
     "    fMin, R, Nw, w, D = getParams(fs)\n",
     "    \n",
@@ -208,7 +207,7 @@
     "    alpha_len = next_fast_len(X_w.shape[1])\n",
     "    CS_CMS = fft(np.conjugate(X_w) * X_w, alpha_len, axis=1).T\n",
     "\n",
-    "    alpha = np.fft.fftfreq(alpha_len, t[1])\n",
+    "    alpha = fftfreq(alpha_len, t[1])\n",
     "    CS_CMS = CS_CMS[alpha >= 0, :]\n",
     "    CCoh_CMS = CS_CMS / CS_CMS[0, :]\n",
     "\n",
@@ -231,8 +230,9 @@
     "    _, _, X_w = stft(x, fs=fs, window=w, nperseg=Nw, noverlap=Nw - R, nfft=Nw, return_onesided=True)\n",
     "    f, t, x_w_d = stft(x, fs=fs, window=w * D, nperseg=Nw, noverlap=Nw - R, nfft=Nw, return_onesided=True)\n",
     "\n",
-    "    # here I save some computation time (factor of fMin / fs ~ 4) but later I have to implement the approsimation \n",
-    "    # to the coherence by neglecting the frequency shift CCoh = CS / CS[0, :]\n",
+    "    # here I save some computation time (factor of fMin / fs ~ 4) but later I have to implement the approximation \n",
+    "    # to the coherence by neglecting the frequency shift -> CCoh = CS / CS[0, :] rather than \n",
+    "    # -> CCoh = CS / sqrt(CS[0, :] * CS[0, k-(a * Nw) / (M * R)] \n",
     "    X_w = X_w[f >= fMin, :]\n",
     "    x_w_d = x_w_d[f >= fMin, :]\n",
     "\n",
@@ -240,6 +240,12 @@
     "\n",
     "    alpha = np.fft.fftfreq(x_w_d.shape[1], R / fs)\n",
     "    CS = CS[alpha >= 0, :]\n",
+    "    \n",
+    "    # here I implemented the normalization but did not find it useful - the results' improvement is not impressive.\n",
+    "#     normalizingFactor = fft((w**2) * D, int(R * (1 + (x.size - Nw) / R)))[:CS.shape[0]]\n",
+    "#     normalizingFactor *= fs * x_w_d.shape[1]\n",
+    "#     CS = (CS.T / normalizingFactor).T\n",
+    "    \n",
     "    CCoh = CS / CS[0, :]\n",
     "\n",
     "    alpha = alpha[alpha >= 0]\n",
@@ -277,7 +283,7 @@
    },
    "outputs": [],
    "source": [
-    "CS_fast, CCoh_fast, f_fast, alpha_fast = getCS(x, fs)\n",
+    "CS_fast, CCoh_fast, f_fast, alpha_fast = getCS_fast(x, fs)\n",
     "CS_CMS, CCoh_CMS, f_CMS, alpha_CMS = getCS_CMS(x, fs)"
    ]
   },
@@ -373,13 +379,13 @@
    "outputs": [],
    "source": [
     "EES_ACP = np.sum(np.abs(CS_ACP), axis=1)\n",
-    "EES_fast = np.sum(np.abs(CS), axis=1)\n",
+    "EES_fast = np.sum(np.abs(CS_fast), axis=1)\n",
     "EES_CMS = np.sum(np.abs(CS_CMS), axis=1)\n",
     "\n",
     "plt.figure(figsize=figsize)\n",
     "plt.plot(alpha_ACP,  EES_ACP / EES_ACP.max() * EES_fast.max(), linewidth=8)\n",
-    "plt.plot(alpha, EES_fast, linewidth=6)\n",
-    "plt.plot(alpha_CMS, EES_CMS, linewidth=4)\n",
+    "plt.plot(alpha_fast, EES_fast, linewidth=6)\n",
+    "# plt.plot(alpha_CMS, EES_CMS, linewidth=4)\n",
     "plt.xlabel('Modulation Frequency [Hz]')\n",
     "plt.ylabel('EES - CS')\n",
     "plt.legend(['ACP', 'Faster', 'CMS'])\n",
@@ -395,12 +401,12 @@
    "outputs": [],
    "source": [
     "EES_ACP = np.mean(np.abs(CCoh_ACP), axis=1)\n",
-    "EES_fast = np.mean(np.abs(CCoh), axis=1)\n",
+    "EES_fast = np.mean(np.abs(CCoh_fast), axis=1)\n",
     "EES_CMS = np.mean(np.abs(CCoh_CMS), axis=1)\n",
     "\n",
     "plt.figure(figsize=figsize)\n",
     "plt.plot(alpha_ACP,  EES_ACP, linewidth=10)\n",
-    "plt.plot(alpha, EES_fast, linewidth=6)\n",
+    "plt.plot(alpha_fast, EES_fast, linewidth=6)\n",
     "plt.plot(alpha_CMS, EES_CMS / EES_CMS.max() * EES_fast.max(), linewidth=3)\n",
     "plt.xlabel('Modulation Frequency [Hz]')\n",
     "plt.ylabel('EES - Coherence')\n",
@@ -425,12 +431,12 @@
    "outputs": [],
    "source": [
     "EES_ACP = np.mean(np.abs(CCoh_ACP[:, f_ACP < f_ACP[-1] * 0.9]), axis=1)\n",
-    "EES_fast = np.mean(np.abs(CCoh[:,  f < f[-1] * 0.9]), axis=1)\n",
-    "EES_CMS = np.mean(np.abs(CCoh_CMS[:,  f < f[-1] * 0.9]), axis=1)\n",
+    "EES_fast = np.mean(np.abs(CCoh_fast[:,  f_fast < f_fast[-1] * 0.9]), axis=1)\n",
+    "EES_CMS = np.mean(np.abs(CCoh_CMS[:,  f_CMS < f_CMS[-1] * 0.9]), axis=1)\n",
     "\n",
     "plt.figure(figsize=figsize)\n",
     "plt.plot(alpha_ACP,  EES_ACP, linewidth=10)\n",
-    "plt.plot(alpha,  EES_fast, linewidth=6)\n",
+    "plt.plot(alpha_fast,  EES_fast, linewidth=6)\n",
     "plt.plot(alpha_CMS, EES_CMS, linewidth=3)\n",
     "plt.xlabel('Modulation Frequency [Hz]')\n",
     "plt.ylabel('EES - Coherence')\n",
@@ -438,6 +444,14 @@
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a331cde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
