included a propare normalization to the coherence, presentation, and running over all the data

--- a/myTransformers/dataProcess.ipynb
+++ b/myTransformers/dataProcess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "148e1896",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "    import pandas as pd\n",
     "    import numpy as np\n",
     "    from numpy.lib.stride_tricks import sliding_window_view\n",
+    "    from scipy.signal import stft\n",
     "    from os.path import isfile\n",
     "    \n",
     "    def getParams (fs, alphaMax=1000, df=100, fMin=5e+4):\n",
@@ -92,12 +93,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de37fbd0",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting 8 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71811f8e70c94393b5c06aec0b76e746",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8 [00:00<?, ?engine/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b7fe15c5e59443fa970959c208ee00b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "calc:   0%|          | 0/11471 [00:00<?, ?tasks/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping engine(s): 1643364445\n",
+      "engine set stopped 1643364445: {'engines': {'0': {'exit_code': 0, 'pid': 18107, 'identifier': '0'}, '1': {'exit_code': 0, 'pid': 18108, 'identifier': '1'}, '2': {'exit_code': 0, 'pid': 18109, 'identifier': '2'}, '3': {'exit_code': 0, 'pid': 18110, 'identifier': '3'}, '4': {'exit_code': 0, 'pid': 18111, 'identifier': '4'}, '5': {'exit_code': 0, 'pid': 18112, 'identifier': '5'}, '6': {'exit_code': 0, 'pid': 18113, 'identifier': '6'}, '7': {'exit_code': 0, 'pid': 18114, 'identifier': '7'}}, 'exit_code': 0}\n",
+      "Stopping controller\n",
+      "Controller stopped: {'exit_code': 0, 'pid': 18095, 'identifier': 'ipcontroller-1643364444-thpw-18090'}\n"
+     ]
+    }
+   ],
    "source": [
     "import ipyparallel as ipp\n",
     "from glob import glob\n",
@@ -122,16 +169,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9539e6b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['29.5_ANALOGMAX-0_alpha.npy',\n",
+       " '29.5_ANALOGMAX-1_alpha.npy',\n",
+       " 'T7_ANALOGMAX-0_alpha.npy',\n",
+       " 'T7_ANALOGMAX-1_alpha.npy',\n",
+       " 'TRF01_IW976-0032_alpha.npy',\n",
+       " 'TRF10_IW976-0032_alpha.npy']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['29.5_ANALOGMAX-0_freq.npy',\n",
+       " '29.5_ANALOGMAX-1_freq.npy',\n",
+       " 'T7_ANALOGMAX-0_freq.npy',\n",
+       " 'T7_ANALOGMAX-1_freq.npy',\n",
+       " 'TRF01_IW976-0032_freq.npy',\n",
+       " 'TRF10_IW976-0032_freq.npy']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['1-EESccoh-29.5_ANALOGMAX-0',\n",
+       " '1-EESccoh-29.5_ANALOGMAX-1',\n",
+       " '1-EESccoh-T7_ANALOGMAX-0',\n",
+       " '1-EESccoh-T7_ANALOGMAX-1',\n",
+       " '1-EESccoh-TRF01_IW976-0032',\n",
+       " '2-EESccoh-TRF01_IW976-0032',\n",
+       " '3-EESccoh-TRF01_IW976-0032',\n",
+       " '4-EESccoh-TRF01_IW976-0032',\n",
+       " '1-EESccoh-TRF10_IW976-0032',\n",
+       " '2-EESccoh-TRF10_IW976-0032',\n",
+       " '3-EESccoh-TRF10_IW976-0032',\n",
+       " '4-EESccoh-TRF10_IW976-0032']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['1-EEScs-29.5_ANALOGMAX-0',\n",
+       " '1-EEScs-29.5_ANALOGMAX-1',\n",
+       " '1-EEScs-T7_ANALOGMAX-0',\n",
+       " '1-EEScs-T7_ANALOGMAX-1',\n",
+       " '1-EEScs-TRF01_IW976-0032',\n",
+       " '2-EEScs-TRF01_IW976-0032',\n",
+       " '3-EEScs-TRF01_IW976-0032',\n",
+       " '4-EEScs-TRF01_IW976-0032',\n",
+       " '1-EEScs-TRF10_IW976-0032',\n",
+       " '2-EEScs-TRF10_IW976-0032',\n",
+       " '3-EEScs-TRF10_IW976-0032',\n",
+       " '4-EEScs-TRF10_IW976-0032']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "files = glob(\"data/*.npy\")\n",
-    "alphas = sorted([l for l in labels if 'alpha.npy' in l])\n",
-    "freqs = sorted([l for l in labels if 'freq.npy' in l])\n",
-    "EESccohS = [l for l in labels if 'EESccoh' in l]\n",
-    "EEScsS = [l for l in labels if 'EEScs' in l]\n",
+    "alphas = sorted([l.split('/')[-1] for l in files if 'alpha.npy' in l])\n",
+    "freqs = sorted([l.split('/')[-1] for l in files if 'freq.npy' in l])\n",
+    "labels = set([l.split('_16')[0].split('/')[-1] for l in files])\n",
+    "EESccohS = [l.split('_16')[0].split('/')[-1] for l in labels if 'EESccoh' in l]\n",
+    "EEScsS = [l.split('_16')[0].split('/')[-1] for l in labels if 'EEScs' in l]\n",
+    "EESccohS = sorted(EESccohS, key=lambda x: (x.split('-')[-2], x.split('-')[-1], x.split('-')[0]))\n",
+    "EEScsS = sorted(EEScsS, key=lambda x: (x.split('-')[-2], x.split('-')[-1], x.split('-')[0]))\n",
     "\n",
     "display(alphas)\n",
     "display(freqs)\n",
@@ -141,12 +260,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "721372f9",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-EESccoh-29.5_ANALOGMAX-0\n",
+      "1-EEScs-29.5_ANALOGMAX-0\n",
+      "1-EESccoh-29.5_ANALOGMAX-1\n",
+      "1-EEScs-29.5_ANALOGMAX-1\n",
+      "1-EESccoh-T7_ANALOGMAX-0\n",
+      "1-EEScs-T7_ANALOGMAX-0\n",
+      "1-EESccoh-T7_ANALOGMAX-1\n",
+      "1-EEScs-T7_ANALOGMAX-1\n",
+      "1-EESccoh-TRF01_IW976-0032\n",
+      "2-EESccoh-TRF01_IW976-0032\n",
+      "3-EESccoh-TRF01_IW976-0032\n",
+      "4-EESccoh-TRF01_IW976-0032\n",
+      "1-EEScs-TRF01_IW976-0032\n",
+      "2-EEScs-TRF01_IW976-0032\n",
+      "3-EEScs-TRF01_IW976-0032\n",
+      "4-EEScs-TRF01_IW976-0032\n",
+      "1-EESccoh-TRF10_IW976-0032\n",
+      "2-EESccoh-TRF10_IW976-0032\n",
+      "3-EESccoh-TRF10_IW976-0032\n",
+      "4-EESccoh-TRF10_IW976-0032\n",
+      "1-EEScs-TRF10_IW976-0032\n",
+      "2-EEScs-TRF10_IW976-0032\n",
+      "3-EEScs-TRF10_IW976-0032\n",
+      "4-EEScs-TRF10_IW976-0032\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
