performance improvement by square coherence prior to sum

--- a/myTransformers/dataProcess.ipynb
+++ b/myTransformers/dataProcess.ipynb
@@ -151,24 +151,27 @@
     "    df = df[df.time_ms < np.round(df.time_ms.values[-1] / 1000) * 1000]\n",
     "    \n",
     "    # sampling rate [sample/sec]\n",
-    "    fs = 1000 / df.iloc[1, 0] \n",
+    "    fs = 1000 / df.time_ms[1] \n",
+    "    \n",
+    "    channNames = df.columns[1:]\n",
+    "    assert channNames.str.contains('adc_signal_mv').all()\n",
     "    \n",
     "    pValue = []\n",
     "    EESs = []\n",
     "    #iteration over sampling channels\n",
-    "    for ch in np.arange(1, df.shape[1]):\n",
-    "        x = df.iloc[:, ch].values\n",
+    "    for ch in channNames:\n",
+    "        x = df[ch].values\n",
     "        \n",
     "        CS, CCoh, f, alpha = getCS(x, fs, alphaMax=alphaMax, dfreq=dfreq, normalization=False)\n",
-    "        CCoh_abs = np.abs(CCoh.T)\n",
+    "        CCoh_abs_sqrt = np.abs(CCoh.T)**2\n",
     "        \n",
     "        # cutting out with respect to the limits of the modulation frequency\n",
     "        edgeCond = (alpha > alphaMax * alphaLims[0]) & (alpha < alphaMax * alphaLims[1])\n",
-    "        CCoh_abs = CCoh_abs[:, edgeCond]\n",
+    "        CCoh_abs_sqrt = CCoh_abs_sqrt[:, edgeCond]\n",
     "        alpha = alpha[edgeCond]\n",
     "        \n",
     "        #Enhenced Envelope Spectrum\n",
-    "        EES = CCoh_abs.sum(axis=0) \n",
+    "        EES = CCoh_abs_sqrt.sum(axis=0) \n",
     "    \n",
     "        # condition for harmonics of 100Hz\n",
     "        cond100 = np.mod(alpha, 100) == 0\n",
@@ -243,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resFold = 'resPvalueHighHarmonicVSallSpect'"
+    "resFold = 'resPvalueHighHarmonicVSallSpect_sqr'"
    ]
   },
   {
@@ -383,7 +386,7 @@
     "    plt.figure(figsize=[19, 5])\n",
     "    plt.plot(row['alpha'], row['EESs'])\n",
     "    plt.grid()\n",
-    "    plt.title(row['file'])\n",
+    "    plt.title(row['file'].split('.')[0].split('/')[-1] + '  - channel ' + str(row['channel']))\n",
     "    plt.show()\n",
     "#plotting the false alarms\n",
     "dfFP = df[(~df.PD) & (df.pValue < 0.1)].sort_values(by='pValue')\n",
@@ -485,14 +488,6 @@
     "#     df = d.map(getPvalEESavro).to_dataframe()\n",
     "#     df.to_parquet(resFile+'_avro')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a03c274e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
